flareon-macros/tests/ui/attr_model_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields.
 --> tests/ui/attr_model_enum.rs:3:1
  |
3 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
